--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,3 @@
-# Python cache
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-
-# Virtual environments
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Logs
+.venv/
+repos/
 *.log
-
-# Temporary files
-*.tmp
-*.temp
