--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "creative-ai"
   ],
   "author": "PinkPlayEvo Team",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5"
