🔒 SECURITY: Fix hardcoded Grafana password in docker-compose
• Replaced hardcoded GF_SECURITY_ADMIN_PASSWORD=swr_admin_2024
• Now uses environment variable ${GRAFANA_ADMIN_PASSWORD}
• Added fallback to 'change-this-password' if not set
• Updated .env with new GRAFANA_ADMIN_PASSWORD variable

⚠️ BREAKING: Update your .env file with:
GRAFANA_ADMIN_PASSWORD=your-secure-password-here"

--- a/docker-compose.swr.yml
+++ b/docker-compose.swr.yml
@@ -93,7 +93,7 @@ services:
     ports:
       - "3001:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=swr_admin_2024
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-change-this-password}
     volumes:
       - grafana_data:/var/lib/grafana
       - ./monitoring/grafana-dashboards:/etc/grafana/provisioning/dashboards:ro
