--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,20 @@ services:
       - SVC_HHU=http://hhu:8004
       - SVC_MTA_QUEST=http://mta-quest:5000
     depends_on:
-      - gok-core
-      - migi-core
-      - hhu
-      - mta-quest
+      gok-core:
+        condition: service_healthy
+      migi-core:
+        condition: service_healthy
+      hhu:
+        condition: service_healthy
+      mta-quest:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8800/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     volumes:
       - ./workspace.json:/app/workspace.json
     networks:
@@ -31,6 +41,12 @@ services:
     command: python services/gok_core_service.py
     ports:
       - "8001:8001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
     volumes:
       - ./services:/app/services
       - ./migi_manifest.json:/app/migi_manifest.json:ro
@@ -45,6 +61,12 @@ services:
     command: python services/migi_core_service.py
     ports:
       - "8002:8002"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
     volumes:
       - ./services:/app/services
     networks:
