--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,26 @@
+# Meta-Genius Core Dependencies - Production Locked
 Flask==2.3.3
 Flask-CORS==4.0.0
 numpy==1.24.3
 gunicorn==21.2.0
+PyYAML==6.0.1
+pytest==7.4.0
+dataclasses-json==0.6.1
+
+# MŚWR v2.0 + J.S.K. Dependencies
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+httpx==0.25.2
+pypdf==3.17.1
+python-multipart==0.0.6
+
+# Development & Testing
+pytest-asyncio==0.21.1
+black==23.11.0
+ruff==0.1.6
+mypy==1.7.1
+
+# Telemetry & Monitoring
+prometheus-client==0.19.0
+structlog==23.2.0
